#VERSION 0.7.9#

*  added class Peak_Controller_Helpers > fixed Peak_Controller helper(). Same changes as Peak_View helper()


*  added class Peak_View_Helpers > fixed Peak_View helper() to use this new helpers objects wrapper.
                                    We use now $this->helper()->myclass->mymethod() instead of
                                    $this->helper('myclass')->mymethod()

*  Peak_View > fixed a second issue with setRenderEngine() when calling unknow rendering engine.

*  Peak_Router > added property $params_assoc. fixed resolveRequest() to added params as associative array.
                 added property $params_assoc to Peak_controller too.

*  Peak_Render > fixed __call() for unknow method to check in Peak_View object if method exits and call it.
                 Removed method helper().

*  fixed an issue of render() in Peak_Render_Layouts and Peak_Render_Partials 
   when use cache and render some file inside views.

*  Peak_Render_Layouts > added method isLayout(). fix render() to allow inclusion of layout scripts 
                         inside view without specifying the whole path. Tweaked useLayout() to use isLayout().

*  Peak_Controller > remove property $c_prefix. renamed property $c_actions to $actions.

*  Peak_Render > modified method baseUrl(). Deprecated $view object variable in views file. Use $this instead.

*  Peak_Render > added method enableCacheStrip() and property $_cache_strip. By default $_cache_strip is false. 

*  Peak_Router > added method setBaseUri() and moved code from __construct() there.

*  Peak_Controller > remove _listActions() from __construct(). Can be called on demand inside controllers child
                     but no more needed each time by handleAction()

*  Peak_Controller > added methods isAction(), isZendAction() and zendAction(). Tweaked handleAction() of
                     controller to support 2 actions name styntax: 
                     ex: _index() or indexAction().