@@ -74,47 +74,3 @@ spl_autoload_register('_autoloadAppMod');
 spl_autoload_register('_autoloadAppCustom');
 spl_autoload_register('_autoloadZendInternal');
 if(defined('ZEND_LIB_ABSPATH')) spl_autoload_register('_autoloadZend');
- 
-
-
-function _autoload_err($cn,$file)
-{
-    set_error_handler('catch_autoload_err');
-    trigger_error('Class name '.$cn.' not found in '.dirname($file), E_USER_WARNING);
-    exit();
-}
-
-
-/**
- * ERROR handler for __autoload
- *
- * @param integer $errno
- * @param string  $errstr
- * @param string  $errfile
- * @param integer $errline
- */
-function catch_autoload_err($errno, $errstr, $errfile, $errline)
-{
-    $traceinfos = array('Message' => $errstr,
-    'Code' => $errno,
-    'Line' => $errline,
-    'File' => $errfile);
-
-    $trace = debug_backtrace();
-
-    $err_propagation = array();
-    foreach($trace as $i => $v) {
-        if(isset($v['file']) && isset($v['line'])) $err_propagation[$v['line']] = $v['file'];
-    }
-
-    //echo $errstr.' - '.basename($errfile).' ('.$errline.')<br />Trace:<br />';
-    echo '<div>'.$errstr.'</div><br />Trace:<br />';
-    foreach($err_propagation as $line => $file) echo '- '.$file.' (Line: '.$line.')<br />';
-
-    if((defined('DEV_MODE')) && (DEV_MODE)) {
-        echo '<h3>Trace dump</h3><pre>';
-        print_r($traceinfos);
-        print_r($trace);
-        echo '</pre>';
-    }
-}
